bin/testsuite/tests/compiler/src/errors/compiler3321.swg
#global testerror "Err0707"
func toto()->string
{
    return ""
}

#test
{
    var ptr = @mkcallback(&toto)
}
